--- a/src/com/company/LoginForm.form
+++ b/src/com/company/LoginForm.form
@@ -21,8 +21,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="25" style="1"/>
-              <text value="LOGIN"/>
+              <font name="JetBrains Mono" size="25" style="3"/>
+              <text value="de_BukuKas"/>
             </properties>
           </component>
         </children>
@@ -35,14 +35,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="18691" class="javax.swing.JTextField" binding="usernameField">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="96cda" class="javax.swing.JPasswordField" binding="passwordField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -56,6 +48,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="20" style="0"/>
               <text value="Username"/>
             </properties>
           </component>
@@ -64,8 +57,17 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="20" style="0"/>
               <text value="Password"/>
             </properties>
+          </component>
+          <component id="18691" class="javax.swing.JTextField" binding="usernameField">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
@@ -82,6 +84,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="24" style="0"/>
               <text value="LOGIN"/>
             </properties>
           </component>
@@ -90,6 +93,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="18" style="0"/>
               <text value="REGISTRY"/>
             </properties>
           </component>
